--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -53,14 +53,11 @@
 
             <TextView
                 android:id="@+id/tv_ok_error"
-                style="@style/Text_default"
+                style="@style/Dialog_Primary_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/ok"
-                android:textAllCaps="true"
-                android:textColor="@color/blue_new_ui"
-                android:textStyle="bold" />
+                android:text="@string/ok" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
