--- a/app/src/main/res/layout/activity_wait_for_call_response.xml
+++ b/app/src/main/res/layout/activity_wait_for_call_response.xml
@@ -30,14 +30,14 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_error_dialog" />
+                android:background="@drawable/ic_wait_for_call_response" />
 
             <TextView
                 style="@style/Action_Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_top_to_icon_in_dialog"
-                android:text="@string/error_global"
+                android:layout_marginTop="8dp"
+                android:text="@string/video_call_waiting_title"
                 android:textColor="@color/blue_new_ui_text"
                 android:textStyle="bold" />
 
@@ -49,15 +49,23 @@
                 android:layout_marginTop="@dimen/margin_top_to_title_in_dialog"
                 android:textAlignment="center"
                 android:textColor="@color/blue_new_ui_text"
-                tools:text="Вам отказано в доступе к услуге за несоответствующее поведениею. Доступ будет востановлен через 1 час 59 минут" />
+                android:text="@string/please_stay_on_the_line" />
 
             <TextView
-                android:id="@+id/tv_ok_error"
-                style="@style/Dialog_Primary_button_blue"
+                android:id="@+id/tv_count_down_timer_to_connect"
+                style="@style/Timer_to_connect_interpreter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_top_to_body_in_dialog"
-                android:text="@string/ok" />
+                android:text="5:59" />
+
+            <TextView
+                android:id="@+id/tv_calncel"
+                style="@style/Dialog_Primary_button_red"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/cancel" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
