--- a/app/src/main/res/layout/activity_call_v2.xml
+++ b/app/src/main/res/layout/activity_call_v2.xml
@@ -24,6 +24,7 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -83,41 +84,53 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/messages"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/send_layout"
+        app:layout_constraintEnd_toEndOf="@+id/send_layout"
+        app:layout_constraintStart_toStartOf="@+id/send_layout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:listitem="@layout/item_message_v2" />
+
+
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/send_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorCallToolbar"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
         <EditText
             android:id="@+id/message_field"
+            style="@style/EditText_rounded"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="45dp"
+            android:elevation="1dp"
             android:hint="@string/call_chat_hint"
-            android:textColor="@android:color/white"
-            android:textColorHint="#77FFFFFF"
-            android:textSize="12sp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="qqq" />
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/send_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
             android:background="@android:color/transparent"
-            android:tint="@android:color/white"
-            app:srcCompat="@drawable/ic_send" />
-    </LinearLayout>
+            android:elevation="2dp"
+            app:layout_constraintBottom_toBottomOf="@+id/message_field"
+            app:layout_constraintEnd_toEndOf="@+id/message_field"
+            app:layout_constraintTop_toTopOf="@+id/message_field"
+            app:srcCompat="@drawable/ic_send_new" />
+    </android.support.constraint.ConstraintLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/messages"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="5dp"
-        app:layout_constraintBottom_toTopOf="@id/send_layout" />
 
 </android.support.constraint.ConstraintLayout>
