--- a/app/src/main/res/drawable/message_background.xml
+++ b/app/src/main/res/drawable/message_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/blue_new_ui_40"/>
+    <solid android:color="@color/interpreter_message_color"/>
     <corners android:radius="20dp"/>
 </shape>
