--- a/app/src/main/res/layout/activity_call_v2.xml
+++ b/app/src/main/res/layout/activity_call_v2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back01"
     tools:context="com.getbewarned.connectinterpreter.ui.CallActivity">
 
     <View
@@ -16,7 +17,6 @@
         android:id="@+id/interpreter_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/blue_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -88,7 +88,7 @@
         android:id="@+id/messages"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/send_layout"
         app:layout_constraintEnd_toEndOf="@+id/send_layout"
         app:layout_constraintStart_toStartOf="@+id/send_layout"
