--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="green_new_ui">#3CE261</color>
     <color name="timer_color_with_minutes">#c4c4c4</color>
     <color name="timer_color_without_minutes">#0039A6</color>
+    <color name="interpreter_message_color">#448DE6</color>
 
 <!--    opacity-->
     <color name="white_30">#4DFFFFFF</color>
