--- a/app/src/main/res/layout/activity_call_v2.xml
+++ b/app/src/main/res/layout/activity_call_v2.xml
@@ -24,6 +24,7 @@
 
 
     <LinearLayout
+        android:layout_marginTop="24dp"
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,7 +34,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="180dp"
             android:layout_weight="1"
             android:gravity="center">
 
@@ -89,6 +90,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
+        android:fadingEdgeLength="200dp"
+        android:requiresFadingEdge="vertical"
         app:layout_constraintBottom_toTopOf="@id/send_layout"
         app:layout_constraintEnd_toEndOf="@+id/send_layout"
         app:layout_constraintStart_toStartOf="@+id/send_layout"
