--- a/app/src/main/res/layout/activity_wait_for_call_response.xml
+++ b/app/src/main/res/layout/activity_wait_for_call_response.xml
@@ -90,7 +90,7 @@
                 android:text="5:59" />
 
             <TextView
-                android:id="@+id/tv_calncel"
+                android:id="@+id/tv_cancel"
                 style="@style/Dialog_Primary_button_red"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
