--- a/app/src/main/res/layout/activity_compensation_prepare.xml
+++ b/app/src/main/res/layout/activity_compensation_prepare.xml
@@ -2,33 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/back01">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_compensation_video_mask"
-        android:elevation="1dp">
-
-    </ImageView>
-
-    <VideoView
-        android:id="@+id/vv_prepare"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:elevation="0dp"
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/video_frame"
         app:layout_constraintBottom_toTopOf="@+id/tv_compensation_prepare"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@drawable/ic_bottom_wave"
-        android:elevation="2dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:id="@+id/tv_compensation_prepare"
