--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -10,9 +10,8 @@
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="@dimen/toolbar_top_margin"
+        android:padding="16dp"
         android:elevation="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,8 +22,6 @@
         style="@style/Text_toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:elevation="1dp"
@@ -37,7 +34,7 @@
     <VideoView
         android:id="@+id/vv_purchse"
         android:layout_width="wrap_content"
-        android:layout_height="280dp"
+        android:layout_height="270dp"
         android:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +44,6 @@
         android:id="@+id/cl_tariffs"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="240dp"
         android:elevation="16dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -55,14 +51,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/vv_purchse">
 
         <Button
             android:id="@+id/b_choose_tariff"
             style="@style/Button_fab_activatable"
             android:layout_width="match_parent"
-            android:elevation="@dimen/default_elevation"
             android:layout_marginBottom="8dp"
+            android:elevation="@dimen/default_elevation"
             android:text="@string/choose"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +72,8 @@
             app:layout_constraintBottom_toTopOf="@+id/b_choose_tariff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
 
