--- a/app/src/main/res/layout/item_tariff.xml
+++ b/app/src/main/res/layout/item_tariff.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="@dimen/default_elevation"
+    android:layout_marginBottom="12dp"
     app:elevation="@dimen/default_elevation">
 
     <android.support.constraint.ConstraintLayout
