--- a/app/src/main/res/layout/compensation_fragent_final.xml
+++ b/app/src/main/res/layout/compensation_fragent_final.xml
@@ -9,15 +9,16 @@
     android:paddingEnd="@dimen/default_side_margins"
     tools:background="#80D66D6D">
 
-    <VideoView
+    <include
+        android:layout_marginTop="100dp"
         android:id="@+id/vv_compensation_final"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/video_frame"
+        app:layout_constraintBottom_toTopOf="@+id/tv_compensation_prepare"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/tv_compensation_final"
