--- a/app/src/main/res/layout/activity_call_v2.xml
+++ b/app/src/main/res/layout/activity_call_v2.xml
@@ -24,10 +24,10 @@
 
 
     <LinearLayout
-        android:layout_marginTop="24dp"
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -75,13 +75,11 @@
             android:layout_weight="1"
             android:gravity="center">
 
-            <android.support.v7.widget.AppCompatImageButton
+            <ImageView
                 android:id="@+id/end_call_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/end_call_button_background"
-                android:tint="@android:color/white"
-                app:srcCompat="@drawable/ic_end_call_button" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_end_call_new" />
         </LinearLayout>
     </LinearLayout>
 
@@ -90,51 +88,46 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
-        android:fadingEdgeLength="200dp"
+        android:fadingEdgeLength="300dp"
         android:requiresFadingEdge="vertical"
-        app:layout_constraintBottom_toTopOf="@id/send_layout"
-        app:layout_constraintEnd_toEndOf="@+id/send_layout"
-        app:layout_constraintStart_toStartOf="@+id/send_layout"
+        app:layout_constraintBottom_toTopOf="@id/message_field"
+        app:layout_constraintEnd_toEndOf="@+id/message_field"
+        app:layout_constraintStart_toStartOf="@+id/message_field"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:listitem="@layout/item_message_v2" />
 
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/send_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <EditText
+        android:id="@+id/message_field"
+        style="@style/EditText_rounded"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:layout_marginStart="22dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="16dp"
+        android:elevation="1dp"
+        android:hint="@string/call_chat_hint"
+        android:inputType="text"
+        android:paddingTop="11dp"
+        android:paddingEnd="48dp"
+        android:paddingBottom="11dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Lorem ipsum dolore sit amet Lorem ipsum" />
 
-        <EditText
-            android:id="@+id/message_field"
-            style="@style/EditText_rounded"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:inputType="text"
-            android:elevation="1dp"
-            android:hint="@string/call_chat_hint"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="qqq" />
-
-        <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/send_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:background="@android:color/transparent"
-            android:elevation="2dp"
-            app:layout_constraintBottom_toBottomOf="@+id/message_field"
-            app:layout_constraintEnd_toEndOf="@+id/message_field"
-            app:layout_constraintTop_toTopOf="@+id/message_field"
-            app:srcCompat="@drawable/ic_send_new" />
-    </android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.AppCompatImageButton
+        android:id="@+id/send_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:background="@android:color/transparent"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/message_field"
+        app:layout_constraintEnd_toEndOf="@+id/message_field"
+        app:layout_constraintTop_toTopOf="@+id/message_field"
+        app:srcCompat="@drawable/ic_send_new" />
 
 
 </android.support.constraint.ConstraintLayout>
