--- a/app/src/main/res/layout/activity_login_v2.xml
+++ b/app/src/main/res/layout/activity_login_v2.xml
@@ -43,6 +43,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:hint="@string/phone_number"
+        android:imeOptions="actionDone"
         android:inputType="number"
         android:padding="8dp"
         android:paddingStart="16dp"
