--- a/app/src/main/res/layout/new_request_activity.xml
+++ b/app/src/main/res/layout/new_request_activity.xml
@@ -10,8 +10,7 @@
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:padding="16dp"
         android:layout_marginTop="@dimen/toolbar_top_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,8 +21,6 @@
         style="@style/Text_toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:text="2008052131"
         app:layout_constraintBottom_toBottomOf="@+id/iv_back"
         app:layout_constraintStart_toEndOf="@+id/iv_back"
@@ -45,31 +42,35 @@
         app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"
         tools:text="New" />
 
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:elevation="@dimen/default_elevation"
-        app:cardCornerRadius="8dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/b_send_request"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_image_request"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:adjustViewBounds="true"
-            android:background="@color/blue_new_ui_text"
-            android:minHeight="100dp" />
-    </androidx.cardview.widget.CardView>
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/default_elevation"
+            app:cardCornerRadius="8dp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_image_request"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:adjustViewBounds="true"
+                android:background="@color/blue_new_ui_text"
+                android:minHeight="100dp" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <Button
         android:id="@+id/b_send_request"
