--- a/app/src/main/res/layout/item_tariff.xml
+++ b/app/src/main/res/layout/item_tariff.xml
@@ -1,70 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="@dimen/default_elevation"
-    android:layout_marginBottom="12dp"
-    app:elevation="@dimen/default_elevation">
+    android:layout_marginBottom="-10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="12dp">
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:translationZ="-8dp"
+        app:cardCornerRadius="18dp"
+        app:cardElevation="@dimen/default_elevation"
+        app:elevation="@dimen/default_elevation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_tariff_name"
-            style="@style/Text_tariff_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/iv_selection_indicator"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Tariff name" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="12dp">
 
-        <ImageView
-            android:id="@+id/iv_selection_indicator"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_tariff_selection_icon"
-            tools:visibility="visible" />
+            <TextView
+                android:id="@+id/tv_tariff_name"
+                style="@style/Text_tariff_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Tariff name" />
 
-        <TextView
-            android:id="@+id/tv_tariff_price"
-            style="@style/Text_tariff_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_tariff_minutes"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="530$" />
+            <TextView
+                android:id="@+id/tv_tariff_price"
+                style="@style/Text_tariff_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <TextView
-            android:id="@+id/tv_tariff_minutes"
-            style="@style/Text_tariff_minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="300 min."
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_tariff_name" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_tariff_minutes"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="530$" />
+
+            <TextView
+                android:id="@+id/tv_tariff_price_discount"
+                style="@style/Text_tariff_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green_new_ui"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_tariff_minutes"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="530$" />
+
+            <TextView
+                android:id="@+id/tv_tariff_price_without_discount"
+                style="@style/Text_tariff_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="530$" />
+
+            <TextView
+                android:id="@+id/tv_tariff_minutes"
+                style="@style/Text_tariff_minutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_tariff_name"
+                tools:text="300 min." />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_unselected_tint"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/qrScannerBackground"
-        android:orientation="horizontal"
+    </androidx.cardview.widget.CardView>
+
+
+    <ImageView
+        android:id="@+id/iv_selection_indicator"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:visibility="invisible"
-        tools:visibility="visible" />
-</androidx.cardview.widget.CardView>
+        app:layout_constraintBottom_toTopOf="@+id/card"
+        app:layout_constraintEnd_toEndOf="@+id/card"
+        app:layout_constraintStart_toEndOf="@+id/card"
+        app:layout_constraintTop_toTopOf="@+id/card"
+        app:srcCompat="@drawable/ic_tariff_selection_icon" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
